# goit-python-web-hw9-scrapy

./: .gitignore  README.md  authors.json  main.py  pyproject.toml
db/: connect_db.py  models.py  seeds.py
