[tool.poetry]
name = "goit-python-web-hw9-scrapy"
version = "0.1.0"
description = ""
authors = ["Volodymyr Kurov <vokur13@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_python_web_hw9_scrapy"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.10.0"
selenium = "^4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
